tests/script_runtime_errors/missing_local/error.txt
Error: 
    1 | missing_var
      | ^^^^^^^^^^^ Trying to access a non existing local key `missing_var`